# open-gop-engine

./: .gitignore  README.md
languages/korean/: extract_matrix.py  matrix_shape.txt
languages/korean/cpp/: CMakeLists.txt  Dockerfile.build  build.sh  linux_build.sh  python_bindings.cpp
languages/korean/cpp/cmake/: FindONNXRuntime.cmake  FindTokenizersCpp.cmake  FindUUID.cmake
languages/korean/cpp/dtw/: dtw_algorithm.cpp  dtw_algorithm.h
languages/korean/cpp/include/realtime_engine_ko/: audio_processor.h  common.h  eval_manager.h  progress_tracker.h  recognition_engine.h  sentence_block.h  w2v_onnx_core.h
languages/korean/cpp/src/: audio_processor.cpp  common.cpp  eval_manager.cpp  progress_tracker.cpp  realtime_engine_c.cpp  recognition_engine.cpp  sentence_block.cpp  w2v_onnx_core.cpp
languages/korean/example/python-audio-app/: audio_app.py
languages/korean/example/recognition-server/: README.md  pyproject.toml
languages/korean/example/recognition-server/app/: main.py
languages/korean/example/recognition-server/app/api/v1/: speech_recognition.py
languages/korean/example/recognition-server/app/core/: config.py
languages/korean/example/recognition-server/app/schemas/: recognition.py  speech_recognition.py
languages/korean/example/recognition-server/app/services/: auth.py  recognition_service.py  speech_recognition.py
languages/korean/example/recognition-server/docker/: Dockerfile  Makefile  docker-compose.yml
languages/korean/models/: readme.md
languages/korean/python/: setup.py
languages/korean/python/korean_gop_engine.egg-info/: PKG-INFO  SOURCES.txt
languages/korean/python/realtime_engine_ko/: __init__.py  audio_processor.py  eval_manager.py  recognition_engine.py  w2v_onnx_core.py
languages/korean/python/realtime_engine_ko.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
